[tool.poetry]
name = "web-scraping-conaliteg"
version = "0.1.0"
description = ""
authors = ["Tonalli Rodriguez <t3rodrig@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.0.12"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
